--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6668357432443550"
       crossorigin="anonymous"
     ></script>
+    <meta name="google-adsense-account" content="ca-pub-6668357432443550" />
   </head>
   <body>
     <div id="root"></div>
