--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
       })(window, document, "script", "dataLayer", "GTM-MZSQM6WC");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-73HS9K3DXS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-73HS9K3DXS");
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
